= Changelog

== 0.4.0 - unreleased

== 0.3.0 - 2021-05-27

:165: https://github.com/stackabletech/agent/pull/165[#165]
:169: https://github.com/stackabletech/agent/pull/169[#169]
:173: https://github.com/stackabletech/agent/pull/176[#173]
:176: https://github.com/stackabletech/agent/pull/176[#176]

=== Added
* Artifacts for merge requests are created ({169}, {173}).

=== Changed
* Structure of the documentation changed so that it can be incorporated
  into the overall Stackable documentation ({165}).

=== Fixed
* Deadlock fixed which occurred when multiple pods were started or
  stopped simultaneously ({176}).

== 0.2.0 - 2021-05-20

:159: https://github.com/stackabletech/agent/pull/159[#159]
:164: https://github.com/stackabletech/agent/pull/164[#164]

=== Added
* Templating facility added to the `config-directory` parameter ({159}).

=== Fixed
* Pod state synchronized with systemd service state ({164}).

== 0.1.0 - 2021-05-17

:1: https://github.com/stackabletech/agent/pull/1[#1]
:18: https://github.com/stackabletech/agent/pull/18[#18]
:23: https://github.com/stackabletech/agent/pull/23[#23]
:25: https://github.com/stackabletech/agent/pull/25[#25]
:26: https://github.com/stackabletech/agent/pull/26[#26]
:30: https://github.com/stackabletech/agent/pull/30[#30]
:32: https://github.com/stackabletech/agent/pull/32[#32]
:35: https://github.com/stackabletech/agent/pull/35[#35]
:36: https://github.com/stackabletech/agent/pull/36[#36]
:40: https://github.com/stackabletech/agent/pull/40[#40]
:43: https://github.com/stackabletech/agent/pull/43[#43]
:50: https://github.com/stackabletech/agent/pull/50[#50]
:53: https://github.com/stackabletech/agent/pull/53[#53]
:56: https://github.com/stackabletech/agent/pull/56[#56]
:57: https://github.com/stackabletech/agent/pull/57[#57]
:63: https://github.com/stackabletech/agent/pull/63[#63]
:72: https://github.com/stackabletech/agent/pull/72[#72]
:73: https://github.com/stackabletech/agent/pull/73[#73]