@@ -2,3 +2,5 @@
 ** xref:installation/building.adoc[]
 ** xref:installation/binaries.adoc[]
 * xref:configuration.adoc[]
+* Monitoring
+** xref:monitoring/logs.adoc[]
