@@ -4,12 +4,17 @@ use crate::provider::{
 };
 
 use anyhow::{anyhow, Result};
+use kube::{
+    api::{Patch, PatchParams},
+    Api, Client,
+};
 use kubelet::pod::state::prelude::*;
 use kubelet::{
     container::ContainerKey,
     pod::{Pod, PodKey},
 };
 use log::{debug, error, info};
+use serde_json::json;
 use std::time::Instant;
 use tokio::time::{self, Duration};
 
@@ -53,10 +58,11 @@ async fn start_service_units(
 ) -> Result<()> {
     let pod_key = &PodKey::from(pod);
 
-    let (systemd_manager, pod_handle) = {
+    let (client, systemd_manager, pod_handle) = {
         let provider_state = shared.read().await;
         let handles = provider_state.handles.read().await;
         (
+            provider_state.client.clone(),
             provider_state.systemd_manager.clone(),
             handles.get(&pod_key).map(PodHandle::to_owned),
         )
@@ -87,8 +93,17 @@ async fn start_service_units(
             await_startup(&systemd_manager, service_unit, Duration::from_secs(10)).await?;
         }
 
-        let invocation_id = systemd_manager.get_invocation_id(service_unit).await?;
-        store_invocation_id(shared.clone(), pod_key, &container_key, &invocation_id).await?;
+        let maybe_invocation_id = systemd_manager.get_invocation_id(service_unit).await.ok();
+        if let Some(invocation_id) = &maybe_invocation_id {
+            store_invocation_id(shared.clone(), pod_key, &container_key, &invocation_id).await?;
+        }
+        add_annotation(
+            &client,
+            pod,
+            "featureLogs",
+            &maybe_invocation_id.is_some().to_string(),
+        )
+        .await?;
     }
 
     Ok(())
@@ -142,4 +157,36 @@ async fn store_invocation_id(
     let provider_state = shared.write().await;
     let mut handles = provider_state.handles.write().await;
     handles.set_invocation_id(&pod_key, &container_key, invocation_id)
+}
+
+/// Adds an annotation to the given pod.
+///
+/// If there is already an annotation with the given key then the value
+/// is replaced.
+/// The function returns when the patch is sent. It does not await the
+/// changes to be visible to the watching clients.
+async fn add_annotation(client: &Client, pod: &Pod, key: &str, value: &str) -> kube::Result<Pod> {
+    debug!(
+        "Adding annotation [{}: {}] to pod [{:?}]",
+        key,
+        value,
+        PodKey::from(pod)
+    );
+
+    let api: Api<Pod> = Api::namespaced(client.clone(), pod.namespace());
+
+    let patch = json!({
+        "metadata": {
+            "annotations": {
+                key: value
+            }
+        }
+    });
+
+    api.patch(
+        pod.name(),
+        &PatchParams::default(),
+        &Patch::Strategic(patch),
+    )
+    .await
 }
