@@ -2,6 +2,12 @@
 
 == 0.4.0 - unreleased
 
+:188: https://github.com/stackabletech/agent/pull/188[#188]
+
+=== Added
+* Annotation `featureLogs` added to the pods to indicate if logs can be
+  retrieved with `kubectl logs` ({188}).
+
 == 0.3.0 - 2021-05-27
 
 :165: https://github.com/stackabletech/agent/pull/165[#165]
